# Cardano-Mixer-Frontend

./: .gitignore  README.md  cabal.project  cardano-mixer-frontend.cabal  cardanomixer-frontend-nix.cabal  cardanomixer-frontend.cabal  default.nix  hie.yaml
app/: mixer-client.hs
cabal/: cardanomixer-frontend.cabal
result/: circuit-mixer.wasm  index.html
result/css/: cardanomixer-design-b1546-9b66de9866e02.webflow.css
result/js/: Nami.js  cardmix.js  static.js
result/js/CSL/: cardano_serialization_lib.d.ts  cardano_serialization_lib_bg.js  package.json
result/nami-wallet/src/api/: loader.js
result/nami-wallet/temporary_modules/@emurgo/cardano-message-signing-browser/: emurgo_message_signing.js  emurgo_message_signing_bg.js
result/nami-wallet/temporary_modules/@emurgo/cardano-serialization-lib-browser/: cardano_serialization_lib.js  cardano_serialization_lib_bg.js  package-lock.json  package.json
src/: App.hs  Backend.hs  Client.hs  JS.hs  Language.hs  Main.hs  NamiJS.hs
src/App/: Common.hs  Deposit.hs  Withdraw.hs
src/Backend/: Types.hs
src/JS/: App.hs  Types.hs  WebPage.hs
src/WebPage/: Basic.hs
static/: dapp-deposit-connected-transaction-confirmed.html  dapp-deposit-connected-when-deposit.html  dapp-depositwhenconnected.html  dapp-withdraw-find-deposit-not-found.html  dapp-withdraw-please-wait.html  dapp-withdraw-process-finished.html  dapp-withdraw-withdraw.html  dapp-withdraw.html  dapp.html  index.html
static/css/: cardanomixer-design-b1546-9b66de9866e02.webflow.css
