cabal-version:      3.0
name:               cardano-mixer-frontend
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

license: Apache-2.0
license-files:      LICENSE
maintainer:         devteam@cardmix.io

-- A copyright notice.
-- copyright:
-- category:
-- extra-source-files: CHANGELOG.md

common lang
    default-language:   Haskell2010
    ghc-options:
      -Wall
      -Wnoncanonical-monad-instances
      -Wincomplete-uni-patterns
      -Wincomplete-record-updates
      -Wredundant-constraints
      -fwarn-redundant-constraints
      -Widentities

library
    import: lang
    exposed-modules:
    build-depends:
    hs-source-dirs: src
    
executable cardano-mixer-client
  import: lang
  main-is: client-app.hs
  hs-source-dirs: app
  ghc-options:
    -threaded
  build-depends:
    base                          >= 4.9 && < 5,
    aeson                                  -any,
    bytestring                             -any,
    containers                             -any,
    cardano-mixer-frontend                 -any,
    data-default                           -any,
    ghc-prim                               -any,
    random                                 -any,
    reflex-dom                             -any,
    text                                   -any,
    prettyprinter                          -any,
    
    




