cabal-version:       2.4

name:                cardanomixer-frontend
version:             0.1.0.0
author:              Catherine Galkina
maintainer:          catherine.galkina@gmail.com
build-type:          Simple

executable cardanomixer
  main-is:             Main.hs
  hs-source-dirs:      src

  default-language:   Haskell2010
  ghc-options:        -Wall -Wno-unrecognised-pragmas

  if impl(ghcjs)
    ghc-options:      -dedupe

  other-modules:      App
                    , Client
                    , JS
                    , NamiJS

  build-depends:      base >=4.7
                    , aeson
                    , ghcjs-dom
                    , http-api-data
                    , reflex-dom
                    , servant
                    , servant-reflex
                    , text
                    , time
                    , uuid
                    , witherable

  default-extensions: AllowAmbiguousTypes
                    , BangPatterns
                    , BlockArguments
                    , ConstraintKinds
                    , DataKinds
                    , DeriveGeneric
                    , DerivingStrategies
                    , DuplicateRecordFields
                    , FlexibleContexts
                    , FlexibleInstances
                    , FunctionalDependencies
                    , GADTs
                    , GeneralizedNewtypeDeriving
                    , LambdaCase
                    , NamedFieldPuns
                    , OverloadedLabels
                    , OverloadedStrings
                    , PolyKinds
                    , QuasiQuotes
                    , RankNTypes
                    , RecordWildCards
                    , RecursiveDo
                    , ScopedTypeVariables
                    , TemplateHaskell
                    , TupleSections
                    , TypeApplications
                    , TypeFamilies
                    , TypeOperators
                    , UndecidableInstances
                    , ViewPatterns
